# rikitiki

./: .gitmodules  .hgignore  .hgtags  CMakeLists.txt  Doxyfile.in  README.md  rikitiki.cppcheck  rikitikiConfig.cmake.in  rikitikiConfigVersion.cmake.in
Doxygen/: Doxyfile.in
conf/: default.cfg  helloWorld.cfg
doc/: apache.dox  basics.dox  configuration.dox  ctemplate.dox  dependencies.dox  examples.dox  extensions.dox  installation.dox  jsoncpp.dox  log.dox  mongoose.dox  quickstart.dox  rest.dox  rikitiki.dox  servers.dox  stencet.dox
html/ctemplates/: commands.tpl  example.tpl  header.tpl  page_header.tpl
html/styles/: site.css
include/rikitiki/: Request.h  Response.h  StaticContentHandler.h  config.h  connContext.h  connContext.tcc  content_handler.h  content_types.h  exception.h  http_statuses.h  metaprogramming.h  registration.h  requestContext.h  rikitiki  rikitiki.h  routing.h  routing.tcc  server.h  socket.h  stream_helpers.h  types.h
include/rikitiki/apache/: apache  connContext.h  register.h  register.tcc  server.h
include/rikitiki/cef/: cef  connContext.h  server.h
include/rikitiki/configuration/: configuration  configuration.h
include/rikitiki/ctemplate/: connContext_ext.h  ctemplate  ctemplate.h  templatePreprocessor.h
include/rikitiki/examples/: advanced.h  headersTest.h  helloWorld.h  multiType.h  rest.h  restAdv.h  stencetEx.h  tests.h  websocket.h
include/rikitiki/http/: Enums.h  Header.h  Message.h  Request.h  Response.h  content_types.h  http_statuses.h
include/rikitiki/http/helpers/: SimpleRequestClient.h  bufferedMessageTypes.h
include/rikitiki/http/incoming/: Message.h  Request.h  Response.h
include/rikitiki/http/outgoing/: Message.h  Request.h  Response.h
include/rikitiki/iis7/: iis7.h  server.h
include/rikitiki/jsoncpp/: connContext_ext.h  jsoncpp  jsoncpp.h  reflected_conversion.h
include/rikitiki/log/: log  log.h
include/rikitiki/mongoose/: connContext.h  mongoose  mongoose.h  server.h  websocketContext.h
include/rikitiki/reflection/: reflection.h
include/rikitiki/rest/: rest  rest.h  rest.tcc
include/rikitiki/stencet/: stencet
include/rikitiki/utils/: URL.h  macros.h  tuple_ext.h
include/rikitiki/websocket/: websocket  websocketContext.h  websocketProcess.h  websocketServer.h
include/utils/: config.h
src/: CMakeLists.txt  Request.cc  Response.cc  StaticContentHandler.cc  config.cc  config.h.in  connContext.cc  connContext.h  connContext.tcc  content_types.cc  content_types.h  content_types.txt  http_statuses.cc  registration.cc  rikitiki.h  routing.cc  routing.h  routing.tcc  server.cc  server.h  socket.cc  stream_helpers.cc  template.h
src/apache/: CMakeLists.txt  connContext.cc  connContext.h  register.h  register.tcc  server.cc  server.cc~  server.h~
src/cef/: CMakeLists.txt  RequestClient.h  connContext.cc  connContext.h  server.cc
src/configuration/: CMakeLists.txt  configuration.cc
src/ctemplate/: CMakeLists.txt  connContext_ext.cc  connContext_ext.cc~  connContext_ext.h~  headerFooterPreprocessor.cc  headerFooterPreprocessor.h  templatePreprocessor.cc  template_emitter_ext.h
src/examples/: CMakeLists.txt  ctemplate.cc  helloWorld.cc  iis7_mod.i  main.i  main_cef.i  mod.i  mod_ctemplate.cc  mod_helloWorld.cc
src/http/: Enums.cc  Header.cc  Message.cc  Request.cc  Response.cc  content_types.cc  http_statuses.cc
src/http/helpers/: SimpleRequestClient.cc  bufferedMessageTypes.cc
src/http/incoming/: Message.cc  Request.cc  Response.cc
src/http/outgoing/: Message.cc  Request.cc  Response.cc
src/http/parsing/: InvalidStateException.cc  MessageParserState.cc
src/iis7/: server.cc
src/jsoncpp/: CMakeLists.txt
src/mongoose/: CMakeLists.txt  connContext.cc  connContext.h  mongooseWebContext.cc  server.cc  server.h
src/os/linux/http/helpers/: SimpleRequestClient.cc
src/os/windows/http/helpers/: SimpleRequestClient.cc
src/rikitiki/: CMakeLists.txt  connContext.cc  connContext.h  connContext.tcc  content_types.cc  content_types.h  http_statuses.cc  http_statuses.h  rikitiki.h  routing.cc  routing.h  routing.tcc  server.cc  server.h  stream_helpers.cc
src/rikitiki/apache/: apache.h  connContext.cc  connContext.h  register.h  server.cc  server.h
src/rikitiki/configuration/: CMakeLists.txt  configuration.cc  ctemplate.cc  log.cc
src/rikitiki/ctemplate/: CMakeLists.txt  connContext_ext.cc  connContext_ext.h  ctemplate.h  headerFooterPreprocessor.cc  headerFooterPreprocessor.h  templatePreprocessor.cc  templatePreprocessor.h  template_emitter_ext.h
src/rikitiki/examples/: CMakeLists.txt  advanced.cc  advanced.h  ctemplate.cc  examples.cc  headers.cc  headersTest.cc  helloWorld.cc  main.i  mod.i  mod_advanced.cc  mod_ctemplate.cc  mod_helloWorld.cc  rest.cc  rest.h
src/rikitiki/jsoncpp/: connContext_ext.cc  jsoncpp.h
src/rikitiki/log/: CMakeLists.txt  log.cc
src/rikitiki/mongoose/: CMakeLists.txt  connContext.cc  connContext.h  server.cc  server.h
src/rikitiki/rest/: rest.h  rest.tcc
src/stencet/: CMakeLists.txt  stencet.cc
src/utils/: CMakeLists.txt  URL.cc  config.cc  config.h  log.cc  log.h  macros.h  refCount.h  thread_utils.h  time_utils.cc  time_utils.h  tuple_ext.h
src/websocket/: CMakeLists.txt  websocketContext.cc  websocketProcess.cc  websocketServer.cc
test/: CMakeLists.txt  test-examples.py
test/verified/apache/: advanced.0  advanced.1  advanced.2  advanced.3  headersTest.0  headersTest.1  headersTest.2  helloWorld.0  helloWorld.1  helloWorld.2  rest.1  rest.2  rest.3  rest.4  rest.5  rest.6
test/verified/mongoose/: advanced.0  advanced.1  advanced.2  advanced.3  headersTest.0  headersTest.1  headersTest.2  helloWorld.0  helloWorld.1  helloWorld.2  multiType.0  multiType.1  multiType.2  rest.10  rest.11  rest.12  rest.3  rest.4  rest.7  rest.8  rest.9  restAdv.10  restAdv.11  restAdv.3  restAdv.6  restAdv.7  restAdv.9
third/: .hgsub  CMakeLists.txt
third/ctemplate-2.2/: Makefile  config.status  configure  libtool
third/ctemplate-2.2/autom4te.cache/: output.0  traces.0
third/ctemplate-2.2/src/ctemplate/: template_string.h
(+4 files in other folders)
