ADD_MODULE(helloWorld)
ADD_MODULE(multiType)
IF(${USE_WEBSOCKET})
     ADD_MODULE(websocket)
ENDIF()
IF(${USE_STENCET})
	ADD_MODULE(stencetEx)
ENDIF()
IF(${USE_CTEMPLATE})
	ADD_MODULE(advanced)
ENDIF()

ADD_MODULE(headersTest)

IF(${USE_REST})
	ADD_MODULE(restAdv)
	ADD_MODULE(rest)
	if(${USE_APACHE})
		target_link_libraries(mod_rest sqlite3)	
	endif()
	if(${USE_MONGOOSE})
		target_link_libraries(rest sqlite3)	
	endif()
ENDIF()

IF(${USE_MONGOOSE})
	add_executable(multi_examples examples.cc)
	target_link_libraries(multi_examples sqlite3 rikitiki)
	set_property(TARGET multi_examples PROPERTY FOLDER "examples")
ENDIF()

